--- a/banner/src/main/res/layout/banner.xml
+++ b/banner/src/main/res/layout/banner.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center"
+            android:background="@drawable/indicator_bg"
             android:orientation="horizontal"
             android:padding="10dp"
             android:visibility="gone" />
